sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: not found: value getlongeur
    var j=getlongeur-2
          ^